@@ -1,3 +1,7 @@
+* [Bug 885] use emalloc() to get a message at the end of the memory
+            unsigned types cannot be less than 0
+            default_ai_family is a short
+            lose trailing , from enum list
 * [Bug 884] don't access recv buffers after having them passed to the free list.
 * [Bug 882] allow loopback interfaces to share addresses with other interfaces.
 
